# NES-Emulator

./: CMakeLists.txt  LICENSE  README.org
include/: bus.hpp  controller.hpp  cpu.hpp  cpubus.hpp  display.hpp  memory.hpp  nes.hpp  ppu.hpp  ppubus.hpp  ram.hpp  register.hpp  rom.hpp
rom/: .gitignore
rom/test/giko/giko005/: giko005.asm  giko005.fns
rom/test/giko/giko008/: giko008.asm  giko008.fns
rom/test/giko/giko009/: giko009.asm
rom/test/giko/giko010/: giko009.fns  giko010.asm  giko010.fns  giko010b.asm  giko010b.fns
rom/test/giko/giko012/: giko011.fns  giko012.asm  giko012.fns  giko012.nes
rom/test/giko/giko013/: giko013.asm  giko013.fns  giko013.nes
rom/test/giko/giko014/: giko011.asm  giko014.asm  giko014.fns  giko014.nes  giko014b.asm  giko014b.fns  giko014b.nes
rom/test/giko/giko015/: giko015.asm  giko015.fns
src/: bus.cpp  controller.cpp  cpu.cpp  cpubus.cpp  display.cpp  main.cpp  memory.cpp  nes.cpp  ppu.cpp  ppubus.cpp  ram.cpp  register.cpp  rom.cpp
